fix button text on hover visible

--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ a:hover {
 
 .btn:hover {
     background: var(--color-white);
-    color: var(--color-white);
+    color: var(--color-bg);
     border-color: white;
 }
 
